--- a/node.js/config.json.tmpl
+++ b/node.js/config.json.tmpl
@@ -1,6 +1,7 @@
 {
 	"planFolder":"../../../data/plan_files/",
 	"decodeFolder":"../../../data/decoded_files/",
+	"gtfsFolder":"../../../data/gtfs_files/",
 	"recursive":true,
 	"folderFilter":false,
 	"planFilter":false
